--- a/bibliography.bib
+++ b/bibliography.bib
@@ -177,3 +177,15 @@
   year={2008},
   organization={Springer}
 }
+
+@book{baader_horrocks_lutz_sattler_2017,
+  author        = {Baader, Franz and Horrocks, Ian and Lutz, Carsten and Sattler, Uli},
+  date-added    = {2019-04-02 15:05:01 +0200},
+  date-modified = {2019-04-02 15:05:01 +0200},
+  doi           = {10.1017/9781139025355},
+  place         = {Cambridge},
+  publisher     = {Cambridge University Press},
+  title         = {An Introduction to Description Logic},
+  year          = {2017},
+  bdsk-url-1    = {https://doi.org/10.1017/9781139025355}
+}
