--- a/sections/2.2.1.2.sroiq-sem.tex
+++ b/sections/2.2.1.2.sroiq-sem.tex
@@ -1,4 +1,4 @@
-\paragraph{Interpretations} \label{interpretations}
+\subsubsection{Interpretations} \label{interpretations}
 
 The semantics of $\mathcal{SROIQ}$, similar to other description logics, are defined in a model-theoretic way. Therefore, a central notion in that of the interpretations. And \emph{interpretation} $\mathcal{I} = \langle \Delta^\mathcal{I}, \cdot^\mathcal{I} \rangle$ consists of a set $\Delta^\mathcal{I}$ called the \emph{domain} of $\mathcal{I}$, and an \emph{interpretation function} $\cdot^\mathcal{I}$. The interpretation function maps the vocabulary elements as follows:
 
@@ -24,7 +24,7 @@ An interpretation maps the universal role $u$ to $u^\mathcal{I} = \Delta^\mathca
     \item $\geq n r.C$ corollary to the case above indicates those domain elements that have at least $N$ such $r$-related elements, \\$(\geq n r . C)^\mathcal{I} = \{ \delta_1 \in \Delta^\mathcal{I} \mid \left| \{ \delta_2 \in \Delta^\mathcal{I} \mid \langle \delta_1, \delta_2 \rangle \in r^\mathcal{I} \, \land \; \delta_2 \in C^\mathcal{I} \} \right| \geq n \}$.
 \end{itemize}
 
-\paragraph{Satisfaction of Axioms} \label{satisfaction-of-axioms}
+\subsubsection{Satisfaction of Axioms} \label{satisfaction-of-axioms}
 
 The purpose of the (extended) interpretation function is mainly to determine satisfaction of axioms. We define in the following when an axiom $\alpha$ is true, or holds, in a specific interpretation $\mathcal{I}$. If this is the case, the interpretation $\mathcal{I}$ satisfies $\alpha$, written $\mathcal{I} \vDash \alpha$. If an interpretation $\mathcal{I}$ satisfies an axiom $\alpha$, we also say that $\mathcal{I}$ is a model of $\alpha$.
 
