--- a/sections/2.2.dl.tex
+++ b/sections/2.2.dl.tex
@@ -1,14 +1,14 @@
 
+\section{The \texorpdfstring{$\mathcal{SROIQ}$}{SROIQ} Description Logic} \label{sroiq-def}
+
 While ontologies can be represented using a number of different formalisms, for the use in automated reasoning a trade-off must be made between expressivity and practicality. For example, first-order logic (FOL) is more expressive than propositional logic, but this added expressivity comes at the cost of decidability. In addition to decidability, scalability must also be considered in the choice and design of the used representation of the knowledge.
 
 \emph{Description logics} (DL) are often used for building ontologies. They encompass a family of related knowledge representation languages and are often fragments of FOL\footnote{While description logics are fragments of FOL in the sense that for every knowledge base in a given description logic, there exists a FOL theory that has the same models, the syntax used by description logics is different from the syntax used in FOL, and as such a DL axiom is not a valid FOL sentence.} with equality, as is the case with the description logics $\mathcal{SROIQ}$ which is the main focus of this work. DLs are almost always designed to be decidable, and generally offer a favourable trade-off between expressivity and complexity of reasoning tasks. Different description logics have been developed for different applications, that feature varying levels of expressivity.
 
-The following sections will introduce the description logic $\mathcal{SROIQ}$ and the OWL 2 language. The relation between the two will also be discussed. The description of $\mathcal{SROIQ}$ is based on the one presented in \cite{rudolph2011foundations}.
-
-\subsection{The \texorpdfstring{$\mathcal{SROIQ}$}{SROIQ} Description Logic} \label{sroiq-def}
+In this section will introduce the description logic $\mathcal{SROIQ}$ \cite{horrocks2006even, rudolph2011foundations, baader_horrocks_lutz_sattler_2017}.
 
 \input{sections/2.2.1.sroiq.tex}
 
-\subsection{The Web Ontology Language} \label{owl-def}
+\section{The Web Ontology Language} \label{owl-def}
 
 \input{sections/2.2.2.owl.tex}
