--- a/sections/2.3.repair.tex
+++ b/sections/2.3.repair.tex
@@ -5,7 +5,9 @@ As established in \cref{ontology-bugs}, maintaining the consistency and correctn
 
 We define a repair as proposed in \cite{baader2018making}. It is assumed, as is the case for most description logics, that there exists a monotone consequence operator $\vDash$ such that for any two ontologies $\mathcal{O}_1 \subseteq \mathcal{O}_2$ and axiom $\alpha$, $\mathcal{O}_1 \vDash \alpha$ implies $\mathcal{O}_2 \vDash \alpha$. Additionally, $\mathrm{Con}(\mathcal{O})$ shall contain all consequences of $\mathcal{O}$, that is $\mathrm{Con}(\mathcal{O}) = \{ \alpha \mid \mathcal{O} \vDash \alpha \}$. We split the ontology further into two disjoint sets $\mathcal{O} = \mathcal{O}_s \cup \mathcal{O}_r$ of \emph{static axioms} $\mathcal{O}_s$ and \emph{refutable axioms} $\mathcal{O}_r$. Static axioms are assumed to be correct and may not be touched by the repair procedure, while refutable axioms are possibly be erroneous. This separation is useful for example if the static part of the ontology is hand-crafted, while the refutable part is automatically generated. Similarly, it is applicable in case multiple ontologies are combined, and some sources are seen as less trustworthy than others.
 
-Definition: Given an ontology $\mathcal{O} = \mathcal{O}_s \cup \mathcal{O}_r$ and an unintended consequence $\mathcal{O} \vDash \alpha$, $\mathcal{O}_s \not\vDash \alpha$, the ontology $\mathcal{O}_s \subseteq \mathcal{O}'$ is a \emph{repair} of $\mathcal{O}$ with respect to $\alpha$ if $\mathrm{Con}(\mathcal{O}') \subseteq \mathrm{Con}(\mathcal{O}) \setminus \{\alpha\}.$ A repair $\mathcal{O}'$ is an \emph{optimal repair} of $\mathcal{O}$ with respect to $\alpha$ if there exists no other repair $\mathcal{O}_s \subseteq \mathcal{O}''$ such that $\mathrm{Con}(\mathcal{O}') \subset \mathrm{Con}(\mathcal{O}'') \subseteq \mathrm{Con}(\mathcal{O}) \setminus \{\alpha\}$.
+\begin{definition}
+Given an ontology $\mathcal{O} = \mathcal{O}_s \cup \mathcal{O}_r$ and an unintended consequence $\mathcal{O} \vDash \alpha$, $\mathcal{O}_s \not\vDash \alpha$, the ontology $\mathcal{O}_s \subseteq \mathcal{O}'$ is a \emph{repair} of $\mathcal{O}$ with respect to $\alpha$ if $\mathrm{Con}(\mathcal{O}') \subseteq \mathrm{Con}(\mathcal{O}) \setminus \{\alpha\}.$ A repair $\mathcal{O}'$ is an \emph{optimal repair} of $\mathcal{O}$ with respect to $\alpha$ if there exists no other repair $\mathcal{O}_s \subseteq \mathcal{O}''$ such that $\mathrm{Con}(\mathcal{O}') \subset \mathrm{Con}(\mathcal{O}'') \subseteq \mathrm{Con}(\mathcal{O}) \setminus \{\alpha\}$.
+\end{definition}
 
 Given that $\mathcal{O}_s \not\vDash \alpha$, a repair is guaranteed to exist, since $\mathcal{O}_s$ is one such repair. In contrast, generally an optimal repair does not need to exist.
 
@@ -17,7 +19,9 @@ It should be noted also that there exists an infinite number of possible repairs
 
 In contrast, the classical approach to repair consists of locating and removing problematic axioms. As such, a classical repair is always a subset of the original ontology and the number of classical repairs for any pair $\mathcal{O}$ and $\alpha$ is necessarily finite.
 
-Definition: Given an ontology $\mathcal{O} = \mathcal{O}_s \cup \mathcal{O}_r$ and an unintended consequence $\mathcal{O} \vDash \alpha$, $\mathcal{O}_s \not\vDash \alpha$, the ontology $\mathcal{O}_s \subseteq \mathcal{O}' \subseteq \mathcal{O}$ is a \emph{classical repair} of $\mathcal{O}$ with respect to $\alpha$ if $\mathrm{Con}(\mathcal{O}') \subseteq \mathrm{Con}(\mathcal{O}) \setminus \{\alpha\}.$ A classical repair $\mathcal{O}'$ is an \emph{optimal classical repair} of $\mathcal{O}$ with respect to $\alpha$ if there exists no other classical repair $\mathcal{O}_s \subseteq \mathcal{O}'' \subseteq \mathcal{O}$ such that $\mathrm{Con}(\mathcal{O}') \subset \mathrm{Con}(\mathcal{O}'') \subseteq \mathrm{Con}(\mathcal{O}) \setminus \{\alpha\}$.
+\begin{definition}
+Given an ontology $\mathcal{O} = \mathcal{O}_s \cup \mathcal{O}_r$ and an unintended consequence $\mathcal{O} \vDash \alpha$, $\mathcal{O}_s \not\vDash \alpha$, the ontology $\mathcal{O}_s \subseteq \mathcal{O}' \subseteq \mathcal{O}$ is a \emph{classical repair} of $\mathcal{O}$ with respect to $\alpha$ if $\mathrm{Con}(\mathcal{O}') \subseteq \mathrm{Con}(\mathcal{O}) \setminus \{\alpha\}.$ A classical repair $\mathcal{O}'$ is an \emph{optimal classical repair} of $\mathcal{O}$ with respect to $\alpha$ if there exists no other classical repair $\mathcal{O}_s \subseteq \mathcal{O}'' \subseteq \mathcal{O}$ such that $\mathrm{Con}(\mathcal{O}') \subset \mathrm{Con}(\mathcal{O}'') \subseteq \mathrm{Con}(\mathcal{O}) \setminus \{\alpha\}$.
+\end{definition}
 
 We can observe that every classical repair is in fact a valid repair. It follows that also a classical repair is guaranteed to exist. Unlike for the general case of optimal repairs, an optimal classical repair is always guaranteed to exist. This follows from the fact that the set of classical repairs is finite, and the $\subset$ relation is a strict partial order, so there can not be an infinite sequence of classical repairs $\mathcal{O}^{(1)}, \mathcal{O}^{(2)}, \dots$  such that $\mathrm{Con}(\mathcal{O}^{(i)}) \subset \mathrm{Con}(\mathcal{O}^{(i + 1)})$.
 
@@ -27,7 +31,9 @@ We can observe that every classical repair is in fact a valid repair. It follows
 
 Generating a classical repair can be achieved in a number of equivalent ways. One way to compute an optimal classical repair is using justifications and hitting sets \cite{reiter1987theory}.
 
-Definition: Given an ontology $\mathcal{O} = \mathcal{O}_s \cup \mathcal{O}_r$ and an axiom $\mathcal{O} \vDash \alpha$, $\mathcal{O}_s \not\vDash \alpha$, a \emph{justification} for $\alpha$ in $\mathcal{O}$ is a minimal subset $J \subseteq \mathcal{O}_r$ such that $J \cup \mathcal{O}_s \vDash \alpha$. Given the set of all justifications $J_1, \dots, J_n$ for $\alpha$ in $\mathcal{O}$, a \emph{hitting set} $H$ for these justifications is a set of axioms such that $H \cap J_i \not= \empty$ for $i = 1, \dots, n$. $H$ is a \emph{minimal hitting} set if it does not strictly contain another hitting set.
+\begin{definition}
+Given an ontology $\mathcal{O} = \mathcal{O}_s \cup \mathcal{O}_r$ and an axiom $\mathcal{O} \vDash \alpha$, $\mathcal{O}_s \not\vDash \alpha$, a \emph{justification} for $\alpha$ in $\mathcal{O}$ is a minimal subset $J \subseteq \mathcal{O}_r$ such that $J \cup \mathcal{O}_s \vDash \alpha$. Given the set of all justifications $J_1, \dots, J_n$ for $\alpha$ in $\mathcal{O}$, a \emph{hitting set} $H$ for these justifications is a set of axioms such that $H \cap J_i \not= \empty$ for $i = 1, \dots, n$. $H$ is a \emph{minimal hitting} set if it does not strictly contain another hitting set.
+\end{definition}
 
 \begin{example}
 %TODO
