--- a/sections/b.owl2weakening.tex
+++ b/sections/b.owl2weakening.tex
@@ -30,7 +30,7 @@ For OWL 2 DL we must follow the same restrictions, when it comes to regularity a
 \end{align*}
 \endgroup
 
-Using this abstract refinement operator, we build two concrete refinement operators, a generalization operator $\gamma_\mathcal{O} = \zeta_{\mathrm{UpCover}_\mathcal{O}, \mathrm{DownCover}_\mathrm{O}}$ and a specialization operator $\rho_\mathcal{O} = \zeta_{\mathrm{DownCover}_\mathcal{O}, \mathrm{UpCover}_\mathcal{O}}$. Using these generalization and specialization operators we, then define the axiom weakening operator $g_\mathcal{O}$ for OWL 2 DL axioms as follows:
+Using this abstract refinement operator, we build two concrete refinement operators, a generalization operator $\gamma_\mathcal{O} = \zeta_{\mathrm{UpCover}_\mathcal{O}, \mathrm{DownCover}_\mathrm{O}}$ and a specialization operator $\rho_\mathcal{O} = \zeta_{\mathrm{DownCover}_\mathcal{O}, \mathrm{UpCover}_\mathcal{O}}$. Using these generalization and specialization operators, we then define the axiom weakening operator $g_\mathcal{O}$ for OWL 2 DL axioms as follows:
 
 \begingroup
 \scriptsize
