--- a/sections/2.2.1.sroiq.tex
+++ b/sections/2.2.1.sroiq.tex
@@ -1,8 +1,8 @@
-\subsubsection{\texorpdfstring{$\mathcal{SROIQ}$}{SROIQ} Syntax} \label{sroiq-syntax}
+\subsection{\texorpdfstring{$\mathcal{SROIQ}$}{SROIQ} Syntax} \label{sroiq-syntax}
 
 \input{sections/2.2.1.1.sroiq-syn.tex}
 
-\subsubsection{\texorpdfstring{$\mathcal{SROIQ}$}{SROIQ} Semantics} \label{sroiq-semantics}
+\subsection{\texorpdfstring{$\mathcal{SROIQ}$}{SROIQ} Semantics} \label{sroiq-semantics}
 
 \input{sections/2.2.1.2.sroiq-sem.tex}
 
