Changed font a bit

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -61,7 +61,7 @@
   author = {Confalonieri, Roberto and Galliani, Pietro and Kutz, Oliver and Porello, Daniele and Righetti, Guendalina and Troquard, Nicolas},
   title = {Irresistible Refinement Operators for Expressive Description Logics},
   year = {2022},
-  note = {Unpublished manuscript},
+  note = {unpublished},
   institution = {Free University of Bozen-Bolzano, Italy \& University of Geneva}
 }
 
@@ -163,10 +163,24 @@
   year={2018}
 }
 
-@article{confalonieri2020towards,
-  title={Towards even more irresistible axiom weakening},
-  author={Confalonieri, Roberto and Galliani, Pietro and Kutz, Oliver and Porello, Daniele and Righetti, Guendalina and Toquard, Nicolas},
-  year={2020}
+@incollection{confalonieri2020towards,
+  author       = {Roberto Confalonieri and
+                  Pietro Galliani and
+                  Oliver Kutz and
+                  Daniele Porello and
+                  Guendalina Righetti and
+                  Nicolas Troquard},
+  editor       = {Stefan Borgwardt and
+                  Thomas Meyer},
+  title        = {Towards Even More Irresistible Axiom Weakening},
+  booktitle    = {Proceedings of the 33rd International Workshop on Description Logics
+                  (DL 2020) co-located with the 17th International Conference on Principles
+                  of Knowledge Representation and Reasoning (KR 2020), Online Event
+                  [Rhodes, Greece], September 12th to 14th, 2020},
+  series       = {{CEUR} Workshop Proceedings},
+  volume       = {2663},
+  publisher    = {CEUR-WS.org},
+  year         = {2020}
 }
 
 @inproceedings{lam2008fine,
