--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,7 @@
 \usepackage{cleveref}
 \usepackage[english]{babel}
 \usepackage{biblatex}
+\usepackage{libertinus}
 
 \theoremstyle{plain}
 \newtheorem{theorem}{Theorem}
